# skip-sql

./: :memory  CHANGELOG.md  Package.swift  README.md
.github/workflows/: ci.yml  skiplib.yml
Sources/SQLExt/: CMakeLists.txt
Sources/SQLExt/Skip/: skip.yml
Sources/SQLExt/include/: module.modulemap  sqlite3.h  tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_macros.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_pkcs.h  tomcrypt_private.h  tomcrypt_prng.h
Sources/SQLExt/libtomcrypt/headers/: tomcrypt_custom.h  tomcrypt_macros.h  tomcrypt_pkcs.h  tomcrypt_private.h  tomcrypt_prng.h
Sources/SQLExt/libtomcrypt/stream/salsa20/: xsalsa20_test.c
Sources/SQLExt/sqlite/: sqlite3.h  tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_cipher.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_private.h
Sources/SQLExt/sqlite/libtomcrypt/headers/: tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_private.h
Sources/SQLite3/: SQLite3.swift
Sources/SkipSQL/: SQLCodable.swift  SQLContext.swift  SQLPlatform.swift  SQLSchema.swift  SQLStatement.swift  SQLite.swift  SQLiteCLibrary.swift  SQLiteJLibrary.swift  SQLiteLibrary.swift
Sources/SkipSQL/Resources/: SkipSQL.plist
Sources/SkipSQL/Skip/: skip.yml
Sources/SkipSQLCore/: SQLCodable.swift  SQLContext.swift  SQLSchema.swift  SQLite.swift  SQLiteLibrary.swift
Sources/SkipSQLCore/Skip/: skip.yml
Sources/SkipSQLDB/: Foundation.swift  Helpers.swift
Sources/SkipSQLDB/Core/: Backup.swift  Blob.swift  Connection+Aggregation.swift  Connection+Attach.swift  Connection+Pragmas.swift  Connection.swift  Errors.swift  Result.swift  SQLiteFeature.swift  SQLiteVersion.swift  Statement.swift  URIQueryParameter.swift  Value.swift
Sources/SkipSQLDB/Extensions/: Cipher.swift  FTS4.swift  FTS5.swift  RTree.swift
Sources/SkipSQLDB/Schema/: Connection+Schema.swift  SchemaChanger.swift  SchemaDefinitions.swift  SchemaReader.swift
Sources/SkipSQLDB/Typed/: AggregateFunctions.swift  Coding.swift  Collation.swift  CoreFunctions.swift  CustomFunctions.swift  DateAndTimeFunctions.swift  Expression.swift  Operators.swift  Query+with.swift  Query.swift  Schema.swift  Setter.swift  WindowFunctions.swift
Sources/SkipSQLKt/: SkipSQLBundle.swift
Sources/SkipSQLKt/Skip/: skip.yml
Sources/SkipSQLPlus/: Algorithms.swift  SQLPlus.swift  SQLPlusCLibrary.swift  SQLPlusJLibrary.swift
Sources/SkipSQLPlus/Skip/: skip.yml
Tests/SkipSQLDBTests/: Fixtures.swift  FoundationTests.swift  TestHelpers.swift
Tests/SkipSQLDBTests/Core/: BlobTests.swift  Connection+AttachTests.swift  Connection+PragmaTests.swift  ConnectionTests.swift  CoreFunctionsTests.swift  ResultTests.swift  StatementTests.swift  ValueTests.swift
Tests/SkipSQLDBTests/Extensions/: CipherTests.swift  FTS4Tests.swift  FTS5Tests.swift  FTSIntegrationTests.swift  RTreeTests.swift
Tests/SkipSQLDBTests/Schema/: Connection+SchemaTests.swift  SchemaChangerTests.swift  SchemaDefinitionsTests.swift  SchemaReaderTests.swift  SchemaTests.swift
Tests/SkipSQLDBTests/Typed/: AggregateFunctionsTests.swift  CustomAggregationTests.swift  CustomFunctionsTests.swift  DateAndTimeFunctionTests.swift  ExpressionTests.swift  OperatorsTests.swift  QueryIntegrationTests.swift  QueryTests.swift  RowTests.swift  SelectTests.swift  SetterTests.swift  WindowFunctionsTests.swift
Tests/SkipSQLKtTests/: SkipSQLKotlinTests.swift
Tests/SkipSQLPlusTests/: AlgorithmsTest.swift  SQLContextTestConfiguration.swift  SQLContextTests.swift  SQLPlusTests.swift  XCSkipTests.swift
Tests/SkipSQLPlusTests/Skip/: skip.yml
Tests/SkipSQLTests/: SQLContextTestConfiguration.swift  SQLContextTests.swift
Tests/SkipSQLTests/Skip/: skip.yml
